...
                    app:actionLayout="@layout/navigation_badge"/>
            </menu>
        </item>

        <item
            android:checkable="true"
            android:id="@+id/textInputFragment"
            android:icon="@drawable/ic_star_round"
            android:title="@string/action_text_input"/>

        <item
            android:id="@+id/switchFragment"
            android:icon="@drawable/ic_star_round"
...
        <item
            android:id="@+id/snackbarFragment"
            android:icon="@drawable/ic_star_round"
            android:title="@string/action_snackbar"/>

        <item
            android:id="@+id/bannerFragment"
            android:icon="@drawable/ic_star_round"
            android:title="@string/action_banner"/>

        <item
            android:id="@+id/selectInputFragment"
            android:icon="@drawable/ic_star_round"
...
