...
                android:layout_height="72dp"
                android:layout_gravity="bottom"/>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

    <com.zebra.zds.ZdsSystemBanner
        android:id="@+id/systemBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
...
